--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
 	<string name="app_name">photoVKapp</string>
+	<string name="navigation_drawer_open">Open navigation drawer</string>
+	<string name="navigation_drawer_close">Close navigation drawer</string>
+	<string name="action_settings">Settings</string>
+	<string name="leonid_ivankin">Leonid Ivankin</string>
+	<string name="email">lim14@yandex.ru</string>
+	<string name="nav_text_item_selecting_color_scheme">Selecting a color scheme</string>
 </resources>
